# Changelog

Jumpcut predates the widespread adoption of semantic versioning; as such,
pre-1.0 releases are numbered as 0.XX.

## Unreleased
### Fixed
- ShortcutRecorder control was too old to have Mojave styling or Dark Mode
support; some assets have been brought back into the pinned old version
- Removed some blank Info.plist values causing problems in Activity monitor
- Edge case: the hotkey no longer triggers the bezel while setting the hotkey
- Very large clippings (such as Moby Dick) no longer cause discernable lag
time when viewed in the bezel
- Sparkle auto-updater not triggering on launch
### Changed
- Jumpcut now targets versions of macOS 10.11 (Yosemite) and later
- Minimum number of clips to remember is now a more sane 10 instead of 1

## [0.70] - 2019-09-01
### Fixed
- 64-bit compatible; now runs without warning under Mojave
- Corrected behavior for Command-V emission on non-American keyboards
- Known transient sources of content (such as TypeIt4Me and TextExpander) are now ignored
- Rewrote Launch on Login to support modern macOS requirements
### Added
- Restored “Clear All” menu item
- Accessibility entailment for modern macOS security concerns
- Retina-ready “Jumpcut logo” menu bar icon
- Dark mode support for menu bar icon
- Option to ignore known sources of sensitive data, such as KeePassXC or 1Password
### Removed
- Dropped (regrettably) outdated German and French localizations
- Support for pre-High Sierra macOS
- Dropped Credits preference panel in favor of credits embedded in the About
menu
- Dropped Appearance menu sliders for adjusting bezel transparency
### Changed
- Updated to ShortcutRecord2
- Pointed all references to SourceForge at Github

## [0.63] - 2009-01-26
### Fixed
- When using Spaces, bezel window now appears in active Space rather than
reverting to the first Space it was used in; revised tooltips in preferences
window

## [0.62] - 2008-05-11
### Added
- Paste support for Dvorak and international keyboard users