@@ -5,6 +5,8 @@ pre-1.0 releases are numbered as 0.XX.
 
 ## Unreleased
 ### Fixed
+- Display resolution changes now trigger adjustments to bezel size and
+positioning.
 - ShortcutRecorder control was too old to have Mojave styling or Dark Mode
 support; some assets have been brought back into the pinned old version
 - Removed some blank Info.plist values causing problems in Activity monitor
